--- a/Data_pretreatment/Example/Data_pretreatment.ipynb
+++ b/Data_pretreatment/Example/Data_pretreatment.ipynb
@@ -1032,8 +1032,8 @@
     "\n",
     "tabulated_site_index = np.loadtxt('Tabulated_site_index.txt').astype(np.int64)\n",
     "\n",
-    "features = [descriptor.feas(image_idx) for image_idx in range(len(images))]\n",
-    "#features = multiprocessing.Pool().map(descriptor.feas, range(len(images)))\n",
+    "#features = [descriptor.feas(image_idx) for image_idx in range(len(images))]\n",
+    "features = multiprocessing.Pool().map(descriptor.feas, range(len(images)))\n",
     "\n",
     "shorten_idx_syms = np.array([feature[0] for feature in features], dtype=object)\n",
     "shorten_nbr_syms = np.array([feature[1] for feature in features], dtype=object)\n",
@@ -1112,14 +1112,6 @@
     "                  'tabulated_padding_fillter': ans_tabulated_padding_fillter[idx].astype(np.int32),\n",
     "                 })"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a915e46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
