--- a/Hyperparameter_optimization/FCNN/Hyperparameter_optimization_FCNN.ipynb
+++ b/Hyperparameter_optimization/FCNN/Hyperparameter_optimization_FCNN.ipynb
@@ -267,7 +267,7 @@
     "                final_ans_test_mse = best_test_loss_mse.detach().cpu().numpy()\n",
     "                break\n",
     "        \n",
-    "        np.savetxt(path + 'final_ans_val_mae_'\n",
+    "        np.savetxt('final_ans_val_mae_'\n",
     "                   + str(self.lr)\n",
     "                   + '_'\n",
     "                   + str(self.h_fea_len)\n",
@@ -275,7 +275,7 @@
     "                   + str(self.n_h)\n",
     "                   + '.txt', [final_ans_val_mae])\n",
     "        \n",
-    "        np.savetxt(path + 'final_ans_val_mse_'\n",
+    "        np.savetxt('final_ans_val_mse_'\n",
     "                   + str(self.lr)\n",
     "                   + '_'\n",
     "                   + str(self.h_fea_len)\n",
@@ -283,7 +283,7 @@
     "                   + str(self.n_h)\n",
     "                   + '.txt', [final_ans_val_mse])\n",
     "        \n",
-    "        np.savetxt(path + 'final_ans_test_mae_'\n",
+    "        np.savetxt('final_ans_test_mae_'\n",
     "                   + str(self.lr)\n",
     "                   + '_'\n",
     "                   + str(self.h_fea_len)\n",
@@ -291,7 +291,7 @@
     "                   + str(self.n_h)\n",
     "                   + '.txt', [final_ans_test_mae])\n",
     "        \n",
-    "        np.savetxt(path + 'final_ans_test_mse_'\n",
+    "        np.savetxt('final_ans_test_mse_'\n",
     "                   + str(self.lr)\n",
     "                   + '_'\n",
     "                   + str(self.h_fea_len)\n",
