--- a/Hyperparameter_optimization/TinNet/Hyperparameter_optimization_TinNet.ipynb
+++ b/Hyperparameter_optimization/TinNet/Hyperparameter_optimization_TinNet.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5dd4c4bf",
+   "id": "42ae1383",
    "metadata": {},
    "source": [
-    "Hyperparameter optimization for CGCNN models"
+    "Hyperparameter optimization for TinNet models"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ae4c31",
+   "id": "ee8d53c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,6 @@
     "\n",
     "import numpy as np\n",
     "import torch\n",
-    "import multiprocessing\n",
     "\n",
     "from ray import tune\n",
     "from ray.tune.schedulers import AsyncHyperBandScheduler\n",
@@ -32,20 +31,19 @@
     "from ase import io\n",
     "from ase.db import connect\n",
     "\n",
-    "from tinnet.feature.voronoi import Voronoi\n",
     "from tinnet.regression.regression import Regression"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d1d3adc",
+   "id": "249dde19",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train the network\n",
     "\n",
-    "class TrainGCNN(tune.Trainable):\n",
+    "class TrainTINN(tune.Trainable):\n",
     "    def _setup(self, config):\n",
     "        \n",
     "        self.lr = config.get('lr', 0.01)\n",
@@ -54,26 +52,30 @@
     "        self.h_fea_len = int(config.get('h_fea_len', 128))\n",
     "        self.n_h = int(config.get('n_h', 1))\n",
     "        \n",
-    "        descriptor = Voronoi(max_num_nbr=12,\n",
-    "                             radius=8,\n",
-    "                             dmin=0,\n",
-    "                             step=0.2,\n",
-    "                             dict_atom_fea=None)\n",
-    "        \n",
     "        db = connect('../Database.db')\n",
-    "        \n",
-    "        images = np.array([r.toatoms() for r in db.select()])\n",
     "        \n",
     "        self.d_cen = np.array([r['data']['d_cen'] for r in db.select()], dtype=np.float32)\n",
     "        self.full_width = np.array([r['data']['full_width'] for r in db.select()], dtype=np.float32)\n",
     "        \n",
-    "        self.features = multiprocessing.Pool().map(descriptor.feas, images)\n",
-    "    \n",
+    "        self.tabulated_d_cen_inf = np.array([r['data']['tabulated_d_cen_inf'] for r in db.select()], dtype=np.float32)\n",
+    "        self.tabulated_full_width_inf = np.array([r['data']['tabulated_full_width_inf'] for r in db.select()], dtype=np.float32)\n",
+    "        self.tabulated_mulliken = np.array([r['data']['tabulated_mulliken'] for r in db.select()], dtype=np.float32)\n",
+    "        self.tabulated_site_index = np.array([r['data']['tabulated_mulliken'] for r in db.select()], dtype=np.float32)\n",
+    "        self.tabulated_v2dd = np.array([r['data']['tabulated_v2dd'] for r in db.select()], dtype=np.float32)\n",
+    "        self.tabulated_v2ds = np.array([r['data']['tabulated_v2ds'] for r in db.select()], dtype=np.float32)\n",
+    "        \n",
+    "        self.atom_fea = np.array([r['data']['atom_fea'] for r in db.select()])\n",
+    "        self.nbr_fea = np.array([r['data']['nbr_fea'] for r in db.select()])\n",
+    "        self.nbr_fea_idx = np.array([r['data']['nbr_fea_idx'] for r in db.select()])\n",
+    "        self.tabulated_padding_fillter = np.array([r['data']['tabulated_padding_fillter'] for r in db.select()])\n",
+    "        \n",
     "    def _train(self):\n",
     "        \n",
-    "        self.model = Regression(self.features,\n",
+    "        self.model = Regression(self.atom_fea,\n",
+    "                                self.nbr_fea,\n",
+    "                                self.nbr_fea_idx,\n",
     "                                self.d_cen,\n",
-    "                                phys_model='gcnn_multitask',\n",
+    "                                phys_model='moment',\n",
     "                                optim_algorithm='AdamW',\n",
     "                                weight_decay=0.0001,\n",
     "                                idx_validation=0,\n",
@@ -84,10 +86,19 @@
     "                                h_fea_len=self.h_fea_len,\n",
     "                                n_h=self.n_h,\n",
     "                                full_width=self.full_width,\n",
+    "                                tabulated_d_cen_inf=self.tabulated_d_cen_inf,\n",
+    "                                tabulated_padding_fillter=self.tabulated_padding_fillter,\n",
+    "                                tabulated_full_width_inf=self.tabulated_full_width_inf,\n",
+    "                                tabulated_mulliken=self.tabulated_mulliken,\n",
+    "                                tabulated_site_index=self.tabulated_site_index,\n",
+    "                                tabulated_v2dd=self.tabulated_v2dd,\n",
+    "                                tabulated_v2ds=self.tabulated_v2ds,\n",
     "                                batch_size=64)\n",
     "        \n",
-    "        final_ans_val_mae, final_ans_val_mse,\\\n",
-    "            final_ans_test_mae, final_ans_test_mse\\\n",
+    "        final_ans_val_mae, \\\n",
+    "        final_ans_val_mse,\\\n",
+    "        final_ans_test_mae, \\\n",
+    "        final_ans_test_mse \\\n",
     "                = self.model.train(25000)\n",
     "        \n",
     "        np.savetxt('final_ans_val_mae_'\n",
@@ -152,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7fb75d2",
+   "id": "4f90fccc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,8 +178,8 @@
     "    scheduler = AsyncHyperBandScheduler()\n",
     "    \n",
     "    analysis = tune.run(\n",
-    "        TrainGCNN,\n",
-    "        name='TrainGCNN',\n",
+    "        TrainTINN,\n",
+    "        name='TrainTINN',\n",
     "        metric='mean_loss',\n",
     "        mode='min',\n",
     "        search_alg=algo,\n",
@@ -185,10 +196,10 @@
     "        checkpoint_at_end=True,\n",
     "        checkpoint_freq=20,\n",
     "        config={\n",
-    "            'lr': tune.loguniform(lower=0.0005, upper=0.004, base=10),\n",
-    "            'atom_fea_len': tune.uniform(lower=100, upper=256),\n",
-    "            'n_conv': tune.uniform(lower=3, upper=7),\n",
-    "            'h_fea_len': tune.uniform(lower=50, upper=156),\n",
+    "            'lr': tune.loguniform(lower=0.0010, upper=0.004, base=10),\n",
+    "            'atom_fea_len': tune.uniform(lower=10, upper=206),\n",
+    "            'n_conv': tune.uniform(lower=4, upper=11),\n",
+    "            'h_fea_len': tune.uniform(lower=10, upper=101),\n",
     "            'n_h': tune.uniform(lower=1, upper=5),\n",
     "        })\n",
     "    \n",
