--- a/Data_pretreatment/Example/Data_pretreatment.ipynb
+++ b/Data_pretreatment/Example/Data_pretreatment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "914ba571",
+   "id": "5a004d4b",
    "metadata": {},
    "source": [
     "This jupyter notebook shows how we converted DFT calculated data to training database."
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "34a6787e",
+   "execution_count": null,
+   "id": "591eb885",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5d4dcb0d",
+   "execution_count": null,
+   "id": "adb143c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6ea5e1d3",
+   "execution_count": null,
+   "id": "43e47f3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8f745bb7",
+   "execution_count": null,
+   "id": "fa6efd57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2b732581",
+   "execution_count": null,
+   "id": "17d1b1b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,8 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "617df453",
+   "execution_count": null,
+   "id": "ae24ef41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ed8d251a",
+   "execution_count": null,
+   "id": "d868d737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7ab96ca8",
+   "execution_count": null,
+   "id": "fcc01edf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,8 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "53671e59",
+   "execution_count": null,
+   "id": "d1994ffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2ceff3fc",
+   "execution_count": null,
+   "id": "605ece18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,8 +375,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f9d1af03",
+   "execution_count": null,
+   "id": "02d73216",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
     "        n_end = n_atoms * 61\n",
     "        site_idx = np.mod(tabulated_site_index[image_idx], n_atoms)\n",
     "        \n",
-    "        image = image.repeat((11,11,1))\n",
+    "        image = image.repeat((33,33,1))\n",
     "        \n",
     "        atom_fea = []\n",
     "        nbr_fea = []\n",
@@ -1010,8 +1010,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "54cc9a1c",
+   "execution_count": null,
+   "id": "db6d2732",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,6 @@
     "\n",
     "images = io.read('clean_images.traj', index=slice(None))\n",
     "\n",
-    "\n",
     "tabulated_d_ij = np.loadtxt('Tabulated_d_ij.txt')\n",
     "tabulated_nbr_index = np.loadtxt('Tabulated_nbr_index.txt').astype(np.int64)\n",
     "tabulated_v2dd = np.loadtxt('Tabulated_v2dd.txt')\n",
@@ -1032,8 +1031,8 @@
     "\n",
     "tabulated_site_index = np.loadtxt('Tabulated_site_index.txt').astype(np.int64)\n",
     "\n",
-    "#features = [descriptor.feas(image_idx) for image_idx in range(len(images))]\n",
-    "features = multiprocessing.Pool().map(descriptor.feas, range(len(images)))\n",
+    "features = [descriptor.feas(image_idx) for image_idx in range(len(images))]\n",
+    "#features = multiprocessing.Pool().map(descriptor.feas, range(len(images)))\n",
     "\n",
     "shorten_idx_syms = np.array([feature[0] for feature in features], dtype=object)\n",
     "shorten_nbr_syms = np.array([feature[1] for feature in features], dtype=object)\n",
@@ -1077,8 +1076,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "8239407b",
+   "execution_count": null,
+   "id": "3df44347",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,14 +1086,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "0f50324f",
+   "execution_count": null,
+   "id": "290080c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ase.db import connect\n",
     "\n",
     "db = connect('Database.db')\n",
+    "\n",
+    "target_d_cen = np.loadtxt('d_cen.txt')\n",
+    "target_full_width = np.loadtxt('full_width.txt')\n",
+    "tabulated_d_cen_inf = np.loadtxt('Tabulated_d_cen_inf.txt')\n",
+    "tabulated_full_width_inf = np.loadtxt('Tabulated_full_width_inf.txt')\n",
+    "tabulated_mulliken = np.loadtxt('Tabulated_mulliken.txt')\n",
     "\n",
     "for idx, image in enumerate(ads_images):\n",
     "    db.write(image,\n",
@@ -1106,10 +1111,10 @@
     "                  'tabulated_site_index': np.array([shorten_tabulated_site_index[idx]]),\n",
     "                  'tabulated_v2dd': ans_tabulated_v2dd[idx],\n",
     "                  'tabulated_v2ds': ans_tabulated_v2ds[idx],\n",
-    "                  'atom_fea': shorten_atom_fea[idx].astype(np.float64),\n",
-    "                  'nbr_fea': shorten_nbr_fea[idx].astype(np.float64),\n",
-    "                  'nbr_fea_idx': shorten_nbr_fea_idx[idx].astype(np.int32),\n",
-    "                  'tabulated_padding_fillter': ans_tabulated_padding_fillter[idx].astype(np.int32),\n",
+    "                  'atom_fea': np.array(shorten_atom_fea[idx]).astype(np.float64),\n",
+    "                  'nbr_fea': np.array(shorten_nbr_fea[idx]).astype(np.float64),\n",
+    "                  'nbr_fea_idx': np.array(shorten_nbr_fea_idx[idx]).astype(np.int32),\n",
+    "                  'tabulated_padding_fillter': np.array(ans_tabulated_padding_fillter[idx]).astype(np.int32),\n",
     "                 })"
    ]
   }
