--- a/Data_pretreatment/Features/Data_pretreatment_features.ipynb
+++ b/Data_pretreatment/Features/Data_pretreatment_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "914ba571",
+   "id": "af3dc8d2",
    "metadata": {},
    "source": [
     "Limited by file size, this database only uploads pre-tabulated data, users can use the following code to generate input features for training."
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "53671e59",
+   "execution_count": null,
+   "id": "0b046499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2ceff3fc",
+   "execution_count": null,
+   "id": "7bbd56f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f9d1af03",
+   "execution_count": null,
+   "id": "d6e113b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "        n_end = n_atoms * 61\n",
     "        site_idx = np.mod(tabulated_site_index[image_idx], n_atoms)\n",
     "        \n",
-    "        image = image.repeat((11,11,1))\n",
+    "        image = image.repeat((33,33,1))\n",
     "        \n",
     "        atom_fea = []\n",
     "        nbr_fea = []\n",
@@ -670,8 +670,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "54cc9a1c",
+   "execution_count": null,
+   "id": "09afc87f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,8 +691,8 @@
     "\n",
     "tabulated_site_index = np.loadtxt('Tabulated_site_index.txt').astype(np.int64)\n",
     "\n",
-    "#features = [descriptor.feas(image_idx) for image_idx in range(len(images))]\n",
-    "features = multiprocessing.Pool().map(descriptor.feas, range(len(images)))\n",
+    "features = [descriptor.feas(image_idx) for image_idx in range(len(images))]\n",
+    "#features = multiprocessing.Pool().map(descriptor.feas, range(len(images)))\n",
     "\n",
     "shorten_idx_syms = np.array([feature[0] for feature in features], dtype=object)\n",
     "shorten_nbr_syms = np.array([feature[1] for feature in features], dtype=object)\n",
@@ -736,8 +736,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "8239407b",
+   "execution_count": null,
+   "id": "22e49435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,12 +746,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0f50324f",
+   "execution_count": null,
+   "id": "69d0a42e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ase.db import connect\n",
+    "\n",
+    "db = connect('Database.db')\n",
     "\n",
     "target_d_cen = np.loadtxt('d_cen.txt')\n",
     "target_full_width = np.loadtxt('full_width.txt')\n",
@@ -760,8 +762,6 @@
     "tabulated_mulliken = np.loadtxt('Tabulated_mulliken.txt')\n",
     "\n",
     "ads_images = io.read('ads_images.traj', index=slice(None))\n",
-    "\n",
-    "db = connect('Database.db')\n",
     "\n",
     "for idx, image in enumerate(ads_images):\n",
     "    db.write(image,\n",
@@ -773,10 +773,10 @@
     "                  'tabulated_site_index': np.array([shorten_tabulated_site_index[idx]]),\n",
     "                  'tabulated_v2dd': ans_tabulated_v2dd[idx],\n",
     "                  'tabulated_v2ds': ans_tabulated_v2ds[idx],\n",
-    "                  'atom_fea': shorten_atom_fea[idx].astype(np.float64),\n",
-    "                  'nbr_fea': shorten_nbr_fea[idx].astype(np.float64),\n",
-    "                  'nbr_fea_idx': shorten_nbr_fea_idx[idx].astype(np.int32),\n",
-    "                  'tabulated_padding_fillter': ans_tabulated_padding_fillter[idx].astype(np.int32),\n",
+    "                  'atom_fea': np.array(shorten_atom_fea[idx]).astype(np.float64),\n",
+    "                  'nbr_fea': np.array(shorten_nbr_fea[idx]).astype(np.float64),\n",
+    "                  'nbr_fea_idx': np.array(shorten_nbr_fea_idx[idx]).astype(np.int32),\n",
+    "                  'tabulated_padding_fillter': np.array(ans_tabulated_padding_fillter[idx]).astype(np.int32),\n",
     "                 })"
    ]
   }
