--- a/Hyperparameter_optimization/FCNN/Hyperparameter_optimization_FCNN.ipynb
+++ b/Hyperparameter_optimization/FCNN/Hyperparameter_optimization_FCNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5bff4d2d",
+   "id": "27868b2c",
    "metadata": {},
    "source": [
     "Hyperparameter optimization for FCNN models"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad512b3",
+   "id": "a5b6a475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d434326",
+   "id": "f5961e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7df1a628",
+   "id": "d7175e01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +148,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc9faa1",
+   "id": "3a08b601",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train the network\n",
+    "\n",
     "class TrainFCNN(tune.Trainable):\n",
     "    def _setup(self, config):\n",
     "        \n",
@@ -307,14 +308,13 @@
     "        return checkpoint_path\n",
     "\n",
     "    def _restore(self, checkpoint_path):\n",
-    "        self.net.load_state_dict(torch.load(checkpoint_path))\n",
-    "\n"
+    "        self.net.load_state_dict(torch.load(checkpoint_path))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e9bac19",
+   "id": "7801fb68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
     "        })\n",
     "    \n",
     "    print('Best config is:', analysis.get_best_config(metric='mean_loss',\n",
-    "                                                      mode='min'))\n"
+    "                                                      mode='min'))"
    ]
   }
  ],
