--- a/Main_figures_plot/Main Figures.ipynb
+++ b/Main_figures_plot/Main Figures.ipynb
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load and prepare data for learning curves, specifically, the average prediction errors of training dataset with different sizes for 4 models: FCNN, CGCNN, TinNet and physical model"
+    "Load and prepare data for learning curves, specifically, the average prediction errors of training dataset with different sizes for 4 models: FCNN, GCNN, TinNet and physical model"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "           learning_curve_gcnn[:,0],\n",
     "           color = 'orange',\n",
     "           linewidth = 1,\n",
-    "           label=r'$\\rm CGCNN$',\n",
+    "           label=r'$\\rm GCNN$',\n",
     "           marker = 'v',\n",
     "           markersize=4)\n",
     "\n",
